Implemented create offer functionality; Added validations