@@ -1,35 +1,34 @@
 package org.softuni.mobilewebapplication.service;
 
 import org.softuni.mobilewebapplication.model.dto.BrandDTO;
-import org.softuni.mobilewebapplication.repository.ModelRepository;
+import org.softuni.mobilewebapplication.model.dto.ModelDTO;
+import org.softuni.mobilewebapplication.repository.BrandRepository;
 import org.springframework.stereotype.Service;
 
-import java.util.HashMap;
+import java.util.Comparator;
 import java.util.List;
-import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 public class BrandServiceImpl implements BrandService {
 
-    private final ModelRepository modelRepository;
+    private final BrandRepository brandRepository;
 
-    public BrandServiceImpl(ModelRepository modelRepository) {
-        this.modelRepository = modelRepository;
+    public BrandServiceImpl(BrandRepository brandRepository) {
+        this.brandRepository = brandRepository;
     }
 
     @Override
     public List<BrandDTO> getAllBrands() {
-        //TODO: better implementation, sorting by brand name
-        Map<String, BrandDTO> brands = new HashMap<>();
-
-//        for (ModelEntity model : this.modelRepository.findAll()) {
-//            String brandName = model.getBrand().getName();
-//
-//            brands.putIfAbsent(brandName, new BrandDTO(brandName, new ArrayList<>()));
-//
-//            brands.get(brandName).models().add(new ModelDTO(model.getId(), model.getName()));
-//        }
-
-        return brands.values().stream().toList();
+        return brandRepository.getAllBrands().stream()
+                .map(brand -> new BrandDTO(
+                        brand.getName(),
+                        brand.getModels().stream()
+                                .map(model -> new ModelDTO(model.getId(), model.getName()))
+                                .sorted(Comparator.comparing(ModelDTO::name))
+                                .collect(Collectors.toList())
+                ))
+                .sorted(Comparator.comparing(BrandDTO::name))
+                .collect(Collectors.toList());
     }
 }
